--- a/src/connectfour/view/game.css
+++ b/src/connectfour/view/game.css
@@ -7,9 +7,12 @@
 }
 
 .gameGrid {
-   -fx-border-width:1px;
-   -fx-border-color: grey;
-   -fx-grid-lines-visible: true;
+    -fx-border-width:1px;
+    -fx-border-color: grey;
+    -fx-grid-lines-visible: true;
+}
+.gameGrid:hover {
+    -fx-cursor: hand;
 }
 
 .neutral {
@@ -19,13 +22,13 @@
 }
 
 .orange {
-     -fx-stroke-type: inside;
+    -fx-stroke-type: inside;
     -fx-stroke: #0000005e;
     -fx-fill: #fff41f;
 }
 
 .red {
-      -fx-stroke-type: inside;
+    -fx-stroke-type: inside;
     -fx-stroke: #0000005e;
     -fx-fill: #2193ff;
 }
